--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router": "^7.1.3",
     "react-toastify": "^11.0.3"
   },
